fixed the issues with images stretching in IE

--- a/less/app.less
+++ b/less/app.less
@@ -373,6 +373,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
+  height: 100%;
   transition: opacity 1s linear;
 }
 
